--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CSD 340 Development with HTML and CSS</title>
+    <title>Landing Page</title>
     <meta name="description" content="bioSite Project">
     <meta name="keywords" content="HTML, CSS, programming, assignment">
     <meta name="author" content="Titus Oien">
