--- a/hobbies.html
+++ b/hobbies.html
@@ -1,1 +1,10 @@
-
+<!-- Titus Oien bioSite Project -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Hobbies Page</title>
+    <meta name="description" content="bioSite Project">
+    <meta name="keywords" content="HTML, CSS, programming, assignment">
+    <meta name="author" content="Titus Oien">
+    <link href="bioSite.css" type="text/css" rel="stylesheet">
+</head>
