--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <div id="navbar">
         <a href="index.html">Landing Page</a>
-        <a href="about.html">About</a>
+        <a href="hobbies.html">Hobbies Page</a>
     </div>
 
     <div id="container">
