--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     unexpected moments.</p>
                 <p>Zeke is a man of diverse interests, ranging from outdoor activities like skiing and hiking to engaging in strategic board games. He's a person who sets clear goals for himself, 
                     aspiring to become a homeowner, start his own business, and cultivate his own food.</p>
-                <p>VAmong his personal achievements, Zeke takes pride in having reconstructed a bus into a cozy abode, self-taught locksmith skills, and holding track and cross-country records at Multnomah University.
+                <p>Among his personal achievements, Zeke takes pride in having reconstructed a bus into a cozy abode, self-taught locksmith skills, and holding track and cross-country records at Multnomah University.
                     These accomplishments speak volumes about his determination, creativity, and athleticism.</p>
                 <p>Zeke's journey, from transforming a bus into a home to excelling in various endeavors, paints the picture of a man who embraces life's challenges with a smile and an unwavering spirit of adventure.</p>
         </div>
