--- a/about.html
+++ b/about.html
@@ -11,13 +11,16 @@
 
 <body>
 
+<header>
+    <h1>About Page</h1>
+</header>
+
     <div id="navbar">
         <a href="index.html">Landing Page</a>
         <a href="hobbies.html">Hobbies Page</a>
     </div>
 
     <div id="container">
-        <h1>About Page</h1>
         
         <div class="image-gallery">
             <div>
