--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link href="bioSite.css" type="text/css" rel="stylesheet">
 </head>
 
+<header>
+    <h1>Landing Page</h1>
+</header>
+
 <body>
 
     <div id="navbar">
@@ -17,7 +21,7 @@
     </div>
 
     <div id="container">
-        <h1>Landing Page</h1>
+        
         
         <div class="image-gallery">
             <div>
