--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <div id="container">
         
-        <div class="image-gallery">
+        <div id="image-gallery">
             <div>
                 <img src="https://photos.smugmug.com/photos/i-SJ8cd34/1/X2/i-SJ8cd34-X2.jpg" alt="Portrait">
             </div>
