--- a/hobbies.html
+++ b/hobbies.html
@@ -23,7 +23,7 @@
     <div id="container">
        
         
-        <div class="image-gallery">
+        <div id="image-gallery">
             <div>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Ski_Famille_-_Family_Ski_Holidays.jpg/1200px-Ski_Famille_-_Family_Ski_Holidays.jpg" alt="Skiing">
             </div>
