--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <div id="container">
         
         <div id="image-gallery">
-            <div>
+            <div class="portrait-img">
                 <img src="https://photos.smugmug.com/photos/i-SJ8cd34/1/X2/i-SJ8cd34-X2.jpg" alt="Portrait">
             </div>
          
