--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,7 @@
        
         
         <div id="image-gallery">
-            <div>
+            <div class= "hobbies-img">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Ski_Famille_-_Family_Ski_Holidays.jpg/1200px-Ski_Famille_-_Family_Ski_Holidays.jpg" alt="Skiing">
             </div>
             <div>
