--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,8 @@
        
         
         <div id="image-gallery">
-            <div class= "hobbies-img">
+        <div class= "hobbies-img">
+            <div>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Ski_Famille_-_Family_Ski_Holidays.jpg/1200px-Ski_Famille_-_Family_Ski_Holidays.jpg" alt="Skiing">
             </div>
             <div>
@@ -33,6 +34,7 @@
             <div>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/JaquesCookStaunton.jpg" alt="Chess"> 
             </div>
+        </div>
         </div>
         <div class="write-up">
             <h2>Brief write-up</h2>
