--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
             <div class="portrait-img">
                 <img src="https://photos.smugmug.com/photos/i-SJ8cd34/1/X2/i-SJ8cd34-X2.jpg" alt="Portrait">
             </div>
+        </div>
          
         </div>
         <div class="bio">
