--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="write-up">
             <h2>Brief write-up</h2>
-                <p>description!</p>
+                <p>description</p>
         </div>
   
        
