--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     </div>
        
     <footer>
-        
+        <p>Donate <a href="https://gofund.me/5eebefb8" target="_blank">here</a> to help Zeke achieve his goal of becoming a homeowner.</p>
     </footer>
 
 </body>
