--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
        
     <footer>
-        
+        <p>Donate <a href="https://gofund.me/5eebefb8" target="_blank">here</a> to help Zeke achieve his goal of becoming a homeowner.</p>
     </footer>
 
 </body>
