--- a/about.html
+++ b/about.html
@@ -45,10 +45,12 @@
                 <p>Zeke's journey, from transforming a bus into a home to excelling in various endeavors, paints the picture of a man who embraces life's challenges with a smile and an unwavering spirit of adventure.</p>
         </div>
     </div>
-       
+   
     <footer>
-        
-    </footer>
+        <div class="scroll-prompt">
+            <p>Scroll to read biography</p>
+        </div>
+   </footer>
 
 </body>
 </html>
