--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<div id="container">
 <header>
     <h1>About Page</h1>
 </header>
@@ -45,7 +45,7 @@
                 <p>Zeke's journey, from transforming a bus into a home to excelling in various endeavors, paints the picture of a man who embraces life's challenges with a smile and an unwavering spirit of adventure.</p>
         </div>
     </div>
-   
+</div>
     <footer>
         <div class="scroll-prompt">
             <p>Scroll to read biography</p>
