--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hobbies</title>
+    <title>Zeke's Hobbies</title>
     <meta name="description" content="bioSite Project">
     <meta name="keywords" content="HTML, CSS, programming, assignment">
     <meta name="author" content="Titus Oien">
@@ -10,7 +10,7 @@
 </head>
     
 <header>
-     <h1>Hobbies Page</h1>
+     <h1>Zeke's Hobbies</h1>
 </header>
     
 <body>
