--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About</title>
+    <title>About Zeke</title>
     <meta name="description" content="bioSite Project">
     <meta name="keywords" content="HTML, CSS, programming, assignment">
     <meta name="author" content="Titus Oien">
@@ -12,12 +12,12 @@
 <body>
 <div id="container">
 <header>
-    <h1>About Page</h1>
+    <h1>About Zeke</h1>
 </header>
 
     <div id="navbar">
         <a href="index.html">Landing Page</a>
-        <a href="hobbies.html">Hobbies Page</a>
+        <a href="hobbies.html">Zeke's Hobbies</a>
     </div>
  
         <div id="image-gallery">
