--- a/hobbies.html
+++ b/hobbies.html
@@ -17,7 +17,7 @@
 
     <div id="navbar">
         <a href="index.html">Landing Page</a>
-        <a href="about.html">About Page</a>
+        <a href="about.html">About Zeke</a>
     </div>
 
 
