--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Zeke's Hobbies</title>
+    <title>Hobbies</title>
     <meta name="description" content="bioSite Project">
     <meta name="keywords" content="HTML, CSS, programming, assignment">
     <meta name="author" content="Titus Oien">
@@ -10,13 +10,13 @@
 </head>
     
 <header>
-     <h1>Zeke's Hobbies</h1>
+     <h1>Hobbies</h1>
 </header>
     
 <body>
 
     <div id="navbar">
-        <a href="index.html">Landing Page</a>
+        <a href="index.html">Goals and Asprirations</a>
         <a href="about.html">About Zeke</a>
     </div>
 
