--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Landing Page</title>
+    <title>Goals and Aspirations</title>
     <meta name="description" content="bioSite Project">
     <meta name="keywords" content="HTML, CSS, programming, assignment">
     <meta name="author" content="Titus Oien">
@@ -10,14 +10,14 @@
 </head>
 
 <header>
-    <h1>Landing Page</h1>
+    <h1>Goals and Aspirations</h1>
 </header>
 
 <body>
 
     <div id="navbar">
         <a href="hobbies.html">Hobbies</a>
-        <a href="about.html">About</a>
+        <a href="about.html">About Zeke</a>
     </div>
 
  
