--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </header>
 
     <div id="navbar">
-        <a href="index.html">Landing Page</a>
+        <a href="index.html">Goals and Aspirations</a>
         <a href="hobbies.html">Zeke's Hobbies</a>
     </div>
  
