--- a/hobbies.html
+++ b/hobbies.html
@@ -37,8 +37,15 @@
         </div>
         </div>
         <div class="write-up">
-            <h2>Brief write-up</h2>
-                <p>description</p>
+            <h2>From Labor to Leisure</h2>
+                <p>Zeke's professional life is marked by unwavering dedication and an exemplary work ethic, 
+                    qualities that have propelled him to significant achievements in his career. However, beyond the confines of his professional commitments, 
+                    Zeke finds a different kind of fulfillment. When he's not immersed in work, he passionately embraces the great outdoors and the strategic world of board games. 
+                    Skiing down snow-clad slopes offers him an exhilarating escape, a testament to his love for adventure and his ability to embrace the challenges of nature. 
+                    Hiking through serene trails allows Zeke to connect with the earth, finding peace and rejuvenation amidst the natural beauty that surrounds him. And when he's not seeking thrills in the outdoors, 
+                    Zeke delves into the diverse and strategic complexities of board games, a hobby that mirrors his appreciation for meticulous planning and the quiet thrill of a challenge well met. 
+                    These hobbies allow Zeke to balance the rigor of his professional life with pursuits that refresh his spirit and sharpen his intellect, 
+                    embodying a well-rounded individual who thrives on both work and play.</p>
         </div>
    
        
