--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
         </div>
         </div>
         <div class="write-up">
-            <h2>Brief write-up</h2>
-                <p>description</p>
+            <h2>Zeke's Blueprint for the Future: Home, Harvest, and Entrepreneurship</h2>
+                <p>Zeke's vision for the future is as grounded and expansive as the life he's building with his wife, Krystal, in their ingeniously renovated bus-turned-tiny home.
+                    At the heart of his aspirations lies the dream of homeownership—a desire to lay down permanent roots and establish a space that reflects their creativity and passion for sustainable living.
+                    Beyond the stability of a home, Zeke harbors ambitions of entrepreneurship, aiming to channel his hands-on skills and work ethic into a venture that not only fulfills him personally
+                    but also contributes positively to his community. This entrepreneurial spirit is complemented by a deep-seated wish to live more harmoniously with the earth, 
+                    as he plans to cultivate a garden where he can grow his own food. This step towards self-sufficiency is a testament to his commitment to a lifestyle that values sustainability, health,
+                    and the joy of nurturing life from the ground up. Together, these goals sketch a future where Zeke's dedication to hard work, love for the land, and entrepreneurial instincts converge to create a 
+                    life rich with purpose and connection.</p>
         </div>
   
        
