--- a/hobbies.html
+++ b/hobbies.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         </div>
-        <div class="write-up">
+        <div class="hobbies">
             <h2>From Labor to Leisure</h2>
                 <p>Zeke's professional life is marked by unwavering dedication and an exemplary work ethic, 
                     qualities that have propelled him to significant achievements in his career. However, beyond the confines of his professional commitments, 
