--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         </div>
-        <div class="write-up">
+        <div class="goals">
             <h2>Zeke's Blueprint for the Future: Home, Harvest, and Entrepreneurship</h2>
                 <p>Zeke's vision for the future is as grounded and expansive as the life he's building with his wife, Krystal, in their ingeniously renovated bus-turned-tiny home.
                     At the heart of his aspirations lies the dream of homeownership—a desire to lay down permanent roots and establish a space that reflects their creativity and passion for sustainable living.
