--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 </header>
 
     <div id="navbar">
+        <a href="about.html" class="active">About Zeke</a>
         <a href="index.html">Goals and Aspirations</a>
         <a href="hobbies.html">Zeke's Hobbies</a>
     </div>
