--- a/hobbies.html
+++ b/hobbies.html
@@ -16,6 +16,7 @@
 <body>
 
     <div id="navbar">
+        <a href="hobbies.html"class="active">Zeke's Hobbies</a>
         <a href="index.html">Goals and Asprirations</a>
         <a href="about.html">About Zeke</a>
     </div>
@@ -25,13 +26,13 @@
         
         <div id="image-gallery">
         <div class= "hobbies-img">
-            <div>
+            <div class="ski">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Ski_Famille_-_Family_Ski_Holidays.jpg/1200px-Ski_Famille_-_Family_Ski_Holidays.jpg" alt="Skiing">
             </div>
-            <div>
+            <div class="hike">
                 <img src="https://www.travelandleisure.com/thmb/juPgMzQuYkcjfVHWVwdoGxZkDoE=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/TAL-tour-du-mont-blanc-WORLDHIKES0523-ecb102509c2e47b18b8cdd6aec848db2.jpg" alt="Hiking">
             </div>
-            <div>
+            <div class="chess">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/JaquesCookStaunton.jpg" alt="Chess"> 
             </div>
         </div>
